 <menu	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/knot_select"
		android:title="@string/str_knot_select"

		android:orderInCategory="1"></item>
	<item
		android:id="@+id/options"

		android:title="@string/str_options"
		android:orderInCategory="2">
	 	<menu>
	 	    <group android:checkableBehavior="single">
	 	        <item 
	 	            android:id="@+id/cameraStatic"
					android:title="@string/str_cameraStatic" />
	 	        <item 
	 	            android:id="@+id/cameraDynamic"
					android:title="@string/str_cameraDynamic" />
	 	    </group>
	 	    <group android:checkableBehavior="single">
	 	        <item 
	 	            android:id="@+id/explanations_on"
					android:title="@string/str_explanations_on" />
	 	        <item 
	 	            android:id="@+id/explanations_off"
					android:title="@string/str_explanations_off" />
	 	    </group>
 	        <item 
 	            android:id="@+id/screensaver"
				android:title="@string/str_screensaver" />
 	        <item 
 	            android:id="@+id/change_xml"
				android:title="@string/str_change_xml" />
	 	</menu>
	</item>
	<item
		android:id="@+id/help"

		android:title="@string/str_help"
		android:orderInCategory="3">
	    <menu>
			<item
				android:id="@+id/help_nav"

				android:title="@string/str_help_nav"
				android:orderInCategory="2"></item>
			<item
				android:id="@+id/help_about"

				android:title="@string/str_help_about"
				
				android:orderInCategory="2"></item>
	    </menu>
	</item>
</menu>
